updated rsyntextarea new command "View as.." fixed issues with copy/move/delete dialogs sizes